# ragout

./: Makefile  pyproject.toml
service/: pyproject.toml
service/src/service/api/: run.py
service/src/service/api/routers/: health.py
service/src/service/providers/: factory.py  llm.py
service/tests/unit/: test_provider_factory.py
