[project]
name = "ragout"
version = "0.1.0"
description = "A tasty RAG service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "service",
]

[tool.uv]
exclude-newer = "14 days"

[tool.uv.sources]
service = { workspace = true }

[tool.uv.workspace]
members = [
    "service",
]

