[project]
name = "ragout"
version = "0.1.0"
description = "A tasty RAG service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "service",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "testcontainers[postgres]>=4.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["service/tests"]

[tool.uv]
exclude-newer = "14 days"

[tool.uv.sources]
service = { workspace = true }

[tool.uv.workspace]
members = [
    "service",
]

